add comment schema and bussiness rules
